--- a/styles/3 - pages/_signin.scss
+++ b/styles/3 - pages/_signin.scss
@@ -1,68 +1,97 @@
-.signInComponent {
-  border-radius: 20px;
-}
-
-.header {
-  font-size: 22pt;
-  padding: 30px 0px;
-}
-
-.signInForm {
+.signinPage {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-}
-
-.signInForm > div {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin: 0 0 40px 0;
-}
+  justify-content: center;
 
-.inputField1 {
-  border: solid rgba(220, 220, 220, 1) 1px;
-  font-size: 12pt;
-  padding: 18px;
-  margin: 5px 0px;
-  border-radius: 15px;
-}
+  &__card {
+    max-width: 320px;
+    width: 100%;
+    border-radius: 12px;
+    padding: 24px;
+  }
+  
+  form {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 12px;
 
-.submitButton {
-  background: rgba(14, 120, 213, 1);
-  border: 0px;
-  color: white;
-  font-size: 12pt;
-  margin: 5px 0px;
-  padding: 10px 30px;
-  border-radius: 15px;
-  cursor: pointer;
-}
+    
 
-.submitButton:hover {
-  background: rgb(12, 100, 177);
-}
-
-.label {
-  color: rgba(12, 54, 128, 1);
-  cursor: pointer;
-  text-decoration: none;
-  padding: 0 0 0 3px;
-  margin: 0px 50px 0px 0px;
-}
-
-.error {
-  color: red;
-  font-style: italic;
-  max-width: 80vw;
-}
-
-@media only screen and (min-width: 768px) {
-  .signInComponent {
-    box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
-    padding: 40px 40px 50px 40px;
+    div {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
-  .error {
-    max-width: 350px;
+  &__forgotPassword, &__createAccount{
+    cursor: pointer;
   }
+
+  
+
+  @media only screen and (min-width: 768px) {
+    .signinPage{
+      &__card {
+        max-width: 320px;
+        box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
+      }
+      
+      .error {
+      }
+    }
+  }
+
 }
+
+
+
+// .signInForm > div {
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   margin: 0 0 40px 0;
+// }
+
+// .inputField1 {
+//   border: solid rgba(220, 220, 220, 1) 1px;
+//   font-size: 12pt;
+//   padding: 18px;
+//   margin: 5px 0px;
+//   border-radius: 15px;
+// }
+
+// .submitButton {
+//  
+// }
+
+// .submitButton:hover {
+//   background: rgb(12, 100, 177);
+// }
+
+// .label {
+//   color: rgba(12, 54, 128, 1);
+//   cursor: pointer;
+//   text-decoration: none;
+//   padding: 0 0 0 3px;
+//   margin: 0px 50px 0px 0px;
+// }
+
+// .error {
+//   color: red;
+//   font-style: italic;
+//   max-width: 80vw;
+// }
+
+// @media only screen and (min-width: 768px) {
+//   .signInComponent {
+//     box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
+//     padding: 40px 40px 50px 40px;
+//   }
+
+//   .error {
+//     max-width: 350px;
+//   }
+// }
