--- a/styles/main.css
+++ b/styles/main.css
@@ -47,10 +47,56 @@ body {
 
 h1 {
   font-size: 36px;
+  font-weight: 500;
 }
 
 p {
   font-size: 11px;
+}
+
+label {
+  font-size: 11px;
+  color: #17377b;
+  font-weight: bold;
+}
+
+a {
+  text-decoration: none;
+  color: #17377b;
+  font-size: 11px;
+}
+
+.error {
+  color: red;
+  font-style: italic;
+  max-width: 80vw;
+}
+
+input {
+  border: solid rgba(0, 0, 0, 0.25) 1px;
+  font-size: 11pt;
+  padding: 16px;
+  border-radius: 12px;
+  width: 100%;
+}
+
+input:focus {
+  outline: none;
+  border: solid rgba(0, 0, 0, 0.5) 1px;
+}
+
+.submitButton {
+  background: #3379ce;
+  border: 0px;
+  color: white;
+  font-size: 12pt;
+  padding: 10px 30px;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background: #0c64b1;
 }
 
 .modal {
@@ -114,83 +160,59 @@ p {
   border: 1px solid red;
 }
 
-.signInComponent {
-  border-radius: 20px;
+.signinPage {
+  width: 100%;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.header {
-  font-size: 22pt;
-  padding: 30px 0px;
+.signinPage__card {
+  max-width: 320px;
+  width: 100%;
+  border-radius: 12px;
+  padding: 24px;
 }
 
-.signInForm {
+.signinPage form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  gap: 12px;
 }
 
-.signInForm > div {
+.signinPage form div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 0 40px 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.inputField1 {
-  border: solid gainsboro 1px;
-  font-size: 12pt;
-  padding: 18px;
-  margin: 5px 0px;
-  border-radius: 15px;
-}
-
-.submitButton {
-  background: #0e78d5;
-  border: 0px;
-  color: white;
-  font-size: 12pt;
-  margin: 5px 0px;
-  padding: 10px 30px;
-  border-radius: 15px;
+.signinPage__forgotPassword, .signinPage__createAccount {
   cursor: pointer;
-}
-
-.submitButton:hover {
-  background: #0c64b1;
-}
-
-.label {
-  color: #0c3680;
-  cursor: pointer;
-  text-decoration: none;
-  padding: 0 0 0 3px;
-  margin: 0px 50px 0px 0px;
-}
-
-.error {
-  color: red;
-  font-style: italic;
-  max-width: 80vw;
 }
 
 @media only screen and (min-width: 768px) {
-  .signInComponent {
+  .signinPage .signinPage__card {
+    max-width: 320px;
     -webkit-box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
             box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
-    padding: 40px 40px 50px 40px;
-  }
-  .error {
-    max-width: 350px;
   }
 }
 /*# sourceMappingURL=main.css.map */
