style and add signup page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,11 +13,13 @@
 @import "./1 - basics/typography";
 
 // 2 - MODULES
-@import "./2 - modules/modal";
+@import "./2 - modules/popup";
+@import "./2 - modules/footer";
+@import "./2 - modules/loading";
+
 
 // 3 - PAGES
 @import "./3 - pages/home";
 @import "./3 - pages/signin";
-// @import "./3 - pages/signup";
 
 
