--- a/styles/3 - pages/_signin.scss
+++ b/styles/3 - pages/_signin.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
+  flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
 
@@ -17,8 +18,6 @@
     flex-flow: column nowrap;
     gap: 12px;
 
-    
-
     div {
       display: flex;
       align-items: center;
@@ -29,8 +28,6 @@
   &__forgotPassword, &__createAccount{
     cursor: pointer;
   }
-
-  
 
   @media only screen and (min-width: 768px) {
     .signinPage{
@@ -43,55 +40,4 @@
       }
     }
   }
-
 }
-
-
-
-// .signInForm > div {
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   margin: 0 0 40px 0;
-// }
-
-// .inputField1 {
-//   border: solid rgba(220, 220, 220, 1) 1px;
-//   font-size: 12pt;
-//   padding: 18px;
-//   margin: 5px 0px;
-//   border-radius: 15px;
-// }
-
-// .submitButton {
-//  
-// }
-
-// .submitButton:hover {
-//   background: rgb(12, 100, 177);
-// }
-
-// .label {
-//   color: rgba(12, 54, 128, 1);
-//   cursor: pointer;
-//   text-decoration: none;
-//   padding: 0 0 0 3px;
-//   margin: 0px 50px 0px 0px;
-// }
-
-// .error {
-//   color: red;
-//   font-style: italic;
-//   max-width: 80vw;
-// }
-
-// @media only screen and (min-width: 768px) {
-//   .signInComponent {
-//     box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
-//     padding: 40px 40px 50px 40px;
-//   }
-
-//   .error {
-//     max-width: 350px;
-//   }
-// }
