--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,20 @@ body {
           box-sizing: border-box;
 }
 
+.submitButton {
+  background: #3379ce;
+  border: 0px;
+  color: white;
+  font-size: 12pt;
+  padding: 10px 30px;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.submitButton:hover {
+  background: #0c64b1;
+}
+
 :root {
   --clr-text-light: #000;
   --clr-bg-light: #f5f5f5;
@@ -85,7 +99,40 @@ input:focus {
   border: solid rgba(0, 0, 0, 0.5) 1px;
 }
 
-.submitButton {
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.popup__inner {
+  text-align: justify;
+  position: relative;
+  padding: 24px;
+  border-radius: 12px;
+  width: 100%;
+  max-width: 320px;
+  background-color: white;
+  text-align: center;
+}
+
+.popup__inner p {
+  padding: 15px 0px;
+}
+
+.popup__closeButton {
   background: #3379ce;
   border: 0px;
   color: white;
@@ -95,50 +142,116 @@ input:focus {
   cursor: pointer;
 }
 
-.submitButton:hover {
+.popup__closeButton:hover {
   background: #0c64b1;
 }
 
-.modal {
-  background: white;
-  -webkit-filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
-          filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.5));
-  position: fixed;
-  top: 8rem;
-  bottom: 2rem;
-  left: 2rem;
-  right: 2rem;
+.footerComponent {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 12px;
+  width: 320px;
+}
+
+.footerComponent__darkMode {
+  margin: 0 15px 0 0;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+}
+
+.footerComponent__selectLanguage {
+  border: 0px;
+  font-size: 10pt;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.footerComponent__disclaimers {
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  gap: 12px;
+}
+
+.footerComponent__disclaimers a {
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.footerComponent__disclaimers a:hover {
+  color: #5c5c5c;
+}
+
+@media only screen and (max-width: 768px) {
+  .footerComponent {
+    padding: 0 24px;
+  }
+}
+
+.loadingDiv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
 }
 
-.modal:focus {
-  outline: none;
+.loadingDiv__loader {
+  border: 8px solid #f3f3f3;
+  border-radius: 50%;
+  margin: auto;
+  border-top: 8px solid #3498db;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
 }
 
-.modal img {
-  max-width: 100px;
-  margin: 2rem;
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
-.modal p {
-  max-width: 450px;
-}
-
-.modal button {
-  margin: 1rem auto;
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 .home {
@@ -166,6 +279,10 @@ input:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
