add password recovery page and some Korean i18n text

--- a/styles/3 - pages/_signin.scss
+++ b/styles/3 - pages/_signin.scss
@@ -23,6 +23,9 @@
       align-items: center;
       justify-content: space-between;
     }
+    button {
+      margin-left: auto;
+    }
   }
 
   &__forgotPassword, &__createAccount{
