--- a/styles/main.css
+++ b/styles/main.css
@@ -321,6 +321,10 @@ input:focus {
           justify-content: space-between;
 }
 
+.signinPage form button {
+  margin-left: auto;
+}
+
 .signinPage__forgotPassword, .signinPage__createAccount {
   cursor: pointer;
 }
